--- a/signup.css
+++ b/signup.css
@@ -66,7 +66,7 @@ form {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], select, input[type=submit] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
